Update Docker image and container name for canara_app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   canara_app:
-    image: sakit333/canara_sak
-    container_name: canara_app_sak
+    image: sky1912/canara_sky
+    container_name: canara_app_sky
     build:
       context: .
       dockerfile: Dockerfile
